--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.google.api-client:google-api-client:1.32.1'
-	implementation 'com.google.auth:google-auth-library-oauth2-http:1.0.0'
+
+	compileOnly 'org.projectlombok:lombok'
+  annotationProcessor 'org.projectlombok:lombok'
+
+	// I'm not sure that i need dependencies below at all
+
+	// implementation 'com.google.api-client:google-api-client:1.32.1'
+	// implementation 'com.google.auth:google-auth-library-oauth2-http:1.0.0'
 }
 
 test {
